# osint-foresight

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTOMATE_NOW.ps1  CLAUDE_CODE_README.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROMPT_INTEGRATION_ROADMAP.md  README.md  README.md.backup  README_IMPROVEMENTS.md  RUN_NOW.bat  SETUP.md  audit_results_Germany_consolidated_20250919_072500.json  audit_results_Italy_20250919_072500.json  confidence_standardization_log.json  cordis_import_errors.txt  create_pm_dashboard.py  create_pm_dashboard_compatible.py  create_pm_dashboard_final.py  create_pm_dashboard_old.py  database_merge_report.txt  database_migration_report.txt  decompression_log.txt  environment.yml  full_file_china_scanner.py  geographic_views.sql  json_51gb_sample.txt  mcf_collection_report.txt  pyproject.toml  quick_status.py  requirements.txt  run_weekly_documentation_audit.bat  scan_file_5848.py  scan_other_files.py  setup_git_hooks.py  temporal_views.sql  test_systems.py  validate_documentation.py
.claude/: settings.local.json
.github/: pull_request_template.md
KNOWLEDGE_BASE/: ARCHIVAL_POLICY.md  DATABASE_TABLE_PURPOSES.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_REMEDIATION_COMPLETE_ALL_PHASES.md  DOCUMENTATION_REMEDIATION_COMPLETION_REPORT.md  ETL_VALIDATION_FRAMEWORK.md  EUROSTAT_RECOMMENDED_DATASETS.md  FREE_VC_DATA_SOURCES.md  FUTURE_DATA_COLLECTION_PRIORITIES.md  IMPLEMENTATION_ENFORCEMENT_CHECKLIST.md  PHASE4_AUTOMATION_SETUP.md  PROJECT_BEST_PRACTICES_AND_RECOMMENDATIONS.md  README.md  SESSION_SUMMARY_20250929.md  TRADE_DATA_COLLECTION_SUMMARY.md  (+3 more)
(+5644 files in other folders)
